# MyChess

./: CMakeCache.txt  CMakeLists.txt  Makefile  MyChess  cmake_install.cmake
MyChess111/: CMakeLists.txt  Makefile  MyChess  cmake_install.cmake
MyChess111/header/: board.h  essentials.h  game.h  piece.h
MyChess111/source/: board.cpp  game.cpp  main.cpp  piece.cpp
header/: board.h  critical.h  essentials.h  game.h  piece.h
source/: board.cpp  chess.cpp  critical.cpp  essentials.cpp  game.cpp  main.cpp  phase2.cpp  piece.cpp
